@@ -1,5 +1,6 @@
 24/07/2020
 -   Space station completed notifications options
+-   Added "Better Space Stations" to exp shop
 -   Threat balancement
 
 23/07/2020
